--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "name": "N-TILT",
     "path": "Plugins/N-TILT.zip",
     "formats": ["VST3", "AU", "LV2"],
-    "type": "fx"
+    "type": "fx",
     "enable_gem": false,
     "enable_sfizz": false,
     "enable_ffmpeg": false
