--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -145,7 +145,7 @@ jobs:
 
       - name: Install Dependencies (zypper)
         if: ${{ matrix.pacman == 'zypper' }}
-        run: zypper refresh && zypper install -y git rsync wget bzip2 xz tar cmake alsa-devel libXinerama-devel libXi-devel libcurl-devel libXcomposite-devel freeglut-devel libXrandr-devel libXcursor-devel freetype2-devel gcc gcc-c++ curl ccache python3 libjack-devel gawk unzip ninja-build
+        run: zypper refresh && zypper install -y git rsync wget bzip2 xz tar cmake alsa-devel libXinerama-devel libXi-devel libcurl-devel libXcomposite-devel freeglut-devel libXrandr-devel libXcursor-devel freetype2-devel gcc gcc-c++ curl ccache python3 libjack-devel gawk unzip ninja
 
       - name: Install Dependencies (pacman)
         if: ${{ matrix.pacman == 'pacman' }}
