Use zip build as default again

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   {
     "name": "N-TILT",
     "author": "Nasko",
-    "path": "Plugins/N-TILT",
-    "formats": ["VST3", "AU", "LV2", "CLAP"],
+    "path": "Plugins/N-TILT.zip",
+    "formats": ["VST3", "AU", "LV2", "CLAP", "Standalone"],
     "type": "fx",
     "enable_gem": false,
     "enable_sfizz": false,
